Aumento da cobertura de testes do backend para ~99%
- Cria testes unitários robustos para `EventoProcessoListener`, cobrindo diversos cenários de notificação.
- Adiciona `SubprocessoMapperTest` para cobrir mapeamentos e validações de lookup.
- Expande significativamente `SubprocessoMapaWorkflowServiceTest` para cobrir fluxos complexos de edição e validação de mapas.
- Refatora e expande `SubprocessoValidacaoServiceTest` para cobrir regras de validação.
- Adiciona testes para `ProcessoService`, `UsuarioService` e `UnidadeService` visando métodos críticos e edge cases.
- Remove testes obsoletos ou desnecessários.
- Documenta o progresso em `revisao-coverage.md`.