@@ -6,68 +6,121 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import sgc.comum.erros.ErroAccessoNegado;
+import sgc.comum.erros.ErroEntidadeNaoEncontrada;
+import sgc.comum.erros.ErroValidacao;
 import sgc.mapa.model.Atividade;
+import sgc.mapa.model.Competencia;
+import sgc.mapa.model.Conhecimento;
+import sgc.mapa.model.Mapa;
 import sgc.mapa.service.AtividadeService;
 import sgc.mapa.service.CompetenciaService;
-import sgc.mapa.model.Mapa;
-import sgc.subprocesso.dto.ValidacaoCadastroDto;
-import sgc.subprocesso.model.Subprocesso;
-import sgc.comum.erros.ErroValidacao;
 import sgc.organizacao.UsuarioService;
 import sgc.organizacao.model.Unidade;
 import sgc.organizacao.model.Usuario;
-import sgc.mapa.model.Competencia;
+import sgc.subprocesso.dto.ValidacaoCadastroDto;
+import sgc.subprocesso.model.Subprocesso;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@DisplayName("Testes para SubprocessoValidacaoService")
+@DisplayName("SubprocessoValidacaoService")
 class SubprocessoValidacaoServiceTest {
 
-    @Mock
-    private SubprocessoCrudService crudService;
-    @Mock
-    private AtividadeService atividadeService;
-    @Mock
-    private CompetenciaService competenciaService;
-    @Mock
-    private UsuarioService usuarioService;
+    @Mock private AtividadeService atividadeService;
+    @Mock private CompetenciaService competenciaService;
+    @Mock private UsuarioService usuarioService;
+    @Mock private SubprocessoCrudService crudService;
 
-    @InjectMocks
-    private SubprocessoValidacaoService service;
+    @InjectMocks private SubprocessoValidacaoService service;
 
     @Test
-    @DisplayName("Deve validar existência de atividades - Sucesso")
-    void deveValidarExistenciaAtividadesSucesso() {
+    @DisplayName("validarPermissaoEdicaoMapa: sucesso")
+    void validarPermissaoEdicaoMapaSucesso() {
         Subprocesso sp = new Subprocesso();
-        Mapa mapa = new Mapa();
-        mapa.setCodigo(10L);
-        sp.setMapa(mapa);
+        Unidade u = new Unidade();
+        u.setTituloTitular("123");
+        sp.setUnidade(u);
+        Usuario usuario = new Usuario();
+        usuario.setTituloEleitoral("123");
 
-        Atividade atividade = new Atividade();
-        atividade.setConhecimentos(List.of(new sgc.mapa.model.Conhecimento()));
+        when(crudService.obterEntidadePorCodigoMapa(1L)).thenReturn(sp);
+        when(usuarioService.buscarUsuarioPorLogin("123")).thenReturn(usuario);
 
-        when(crudService.buscarSubprocesso(1L)).thenReturn(sp);
-        when(atividadeService.buscarPorMapaCodigoComConhecimentos(10L)).thenReturn(List.of(atividade));
-
-        service.validarExistenciaAtividades(1L);
+        service.validarPermissaoEdicaoMapa(1L, "123");
     }
 
     @Test
-    @DisplayName("Deve lançar exceção se mapa não tiver atividades")
-    void deveLancarExcecaoSemAtividades() {
+    @DisplayName("validarPermissaoEdicaoMapa: erro sem unidade")
+    void validarPermissaoEdicaoMapaSemUnidade() {
         Subprocesso sp = new Subprocesso();
-        Mapa mapa = new Mapa();
-        mapa.setCodigo(10L);
-        sp.setMapa(mapa);
+        sp.setUnidade(null);
+        when(crudService.obterEntidadePorCodigoMapa(1L)).thenReturn(sp);
 
+        assertThatThrownBy(() -> service.validarPermissaoEdicaoMapa(1L, "123"))
+                .isInstanceOf(ErroEntidadeNaoEncontrada.class);
+    }
+
+    @Test
+    @DisplayName("validarPermissaoEdicaoMapa: erro acesso negado")
+    void validarPermissaoEdicaoMapaAcessoNegado() {
+        Subprocesso sp = new Subprocesso();
+        Unidade u = new Unidade();
+        u.setTituloTitular("456");
+        sp.setUnidade(u);
+        Usuario usuario = new Usuario();
+        usuario.setTituloEleitoral("123");
+
+        when(crudService.obterEntidadePorCodigoMapa(1L)).thenReturn(sp);
+        when(usuarioService.buscarUsuarioPorLogin("123")).thenReturn(usuario);
+
+        assertThatThrownBy(() -> service.validarPermissaoEdicaoMapa(1L, "123"))
+                .isInstanceOf(ErroAccessoNegado.class);
+    }
+
+    @Test
+    @DisplayName("obterAtividadesSemConhecimento: retorna lista vazia se mapa null")
+    void obterAtividadesSemConhecimentoMapaNull() {
+        Subprocesso sp = new Subprocesso();
         when(crudService.buscarSubprocesso(1L)).thenReturn(sp);
-        when(atividadeService.buscarPorMapaCodigoComConhecimentos(10L)).thenReturn(Collections.emptyList());
+        assertThat(service.obterAtividadesSemConhecimento(1L)).isEmpty();
+    }
+
+    @Test
+    @DisplayName("obterAtividadesSemConhecimento: retorna atividades")
+    void obterAtividadesSemConhecimentoRetornaLista() {
+        Mapa mapa = new Mapa();
+        mapa.setCodigo(1L);
+        Atividade a1 = new Atividade(); a1.setConhecimentos(List.of(new Conhecimento()));
+        Atividade a2 = new Atividade(); a2.setConhecimentos(List.of()); // Sem
+        when(atividadeService.buscarPorMapaCodigoComConhecimentos(1L)).thenReturn(List.of(a1, a2));
+
+        assertThat(service.obterAtividadesSemConhecimento(mapa)).containsExactly(a2);
+    }
+
+    @Test
+    @DisplayName("validarExistenciaAtividades: erro sem mapa")
+    void validarExistenciaAtividadesErroSemMapa() {
+        Subprocesso sp = new Subprocesso();
+        when(crudService.buscarSubprocesso(1L)).thenReturn(sp);
+        assertThatThrownBy(() -> service.validarExistenciaAtividades(1L))
+                .isInstanceOf(ErroValidacao.class);
+    }
+
+    @Test
+    @DisplayName("validarExistenciaAtividades: erro sem atividades")
+    void validarExistenciaAtividadesErroSemAtividades() {
+        Subprocesso sp = new Subprocesso();
+        Mapa m = new Mapa(); m.setCodigo(1L);
+        sp.setMapa(m);
+        when(crudService.buscarSubprocesso(1L)).thenReturn(sp);
+        when(atividadeService.buscarPorMapaCodigoComConhecimentos(1L)).thenReturn(List.of());
 
         assertThatThrownBy(() -> service.validarExistenciaAtividades(1L))
                 .isInstanceOf(ErroValidacao.class)
@@ -75,47 +128,28 @@ class SubprocessoValidacaoServiceTest {
     }
 
     @Test
-    @DisplayName("Deve validar permissão de edição do mapa")
-    void deveValidarPermissaoEdicaoMapa() {
+    @DisplayName("validarExistenciaAtividades: erro atividade sem conhecimento")
+    void validarExistenciaAtividadesErroSemConhecimento() {
         Subprocesso sp = new Subprocesso();
-        Unidade u = new Unidade();
-        u.setTituloTitular("123");
-        sp.setUnidade(u);
-
-        Usuario usuario = new Usuario();
-        usuario.setTituloEleitoral("123");
-
-        when(crudService.obterEntidadePorCodigoMapa(100L)).thenReturn(sp);
-        when(usuarioService.buscarUsuarioPorLogin("user")).thenReturn(usuario);
-
-        service.validarPermissaoEdicaoMapa(100L, "user");
-    }
-
-    @Test
-    @DisplayName("validarCadastro sucesso")
-    void validarCadastroSucesso() {
-        Subprocesso sp = new Subprocesso();
-        Mapa mapa = new Mapa();
-        mapa.setCodigo(10L);
-        sp.setMapa(mapa);
-
-        Atividade ativ = new Atividade();
-        ativ.setConhecimentos(List.of(new sgc.mapa.model.Conhecimento()));
+        Mapa m = new Mapa(); m.setCodigo(1L);
+        sp.setMapa(m);
+        Atividade a = new Atividade();
+        a.setConhecimentos(List.of());
 
         when(crudService.buscarSubprocesso(1L)).thenReturn(sp);
-        when(atividadeService.buscarPorMapaCodigoComConhecimentos(10L)).thenReturn(List.of(ativ));
+        when(atividadeService.buscarPorMapaCodigoComConhecimentos(1L)).thenReturn(List.of(a));
 
-        ValidacaoCadastroDto result = service.validarCadastro(1L);
-        assertThat(result.getValido()).isTrue();
+        assertThatThrownBy(() -> service.validarExistenciaAtividades(1L))
+                .isInstanceOf(ErroValidacao.class)
+                .hasMessageContaining("atividades devem possuir conhecimentos");
     }
 
     @Test
-    @DisplayName("Deve lançar exceção se competência não estiver associada")
-    void deveLancarExcecaoSeCompetenciaNaoEstiverAssociada() {
-        Competencia competencia = new Competencia();
-        competencia.setDescricao("C1");
-
-        when(competenciaService.buscarPorMapa(1L)).thenReturn(List.of(competencia));
+    @DisplayName("validarAssociacoesMapa: erro competencias sem associacao")
+    void validarAssociacoesMapaErroCompetencias() {
+        Competencia c = new Competencia();
+        c.setAtividades(Collections.emptySet());
+        when(competenciaService.buscarPorMapa(1L)).thenReturn(List.of(c));
 
         assertThatThrownBy(() -> service.validarAssociacoesMapa(1L))
                 .isInstanceOf(ErroValidacao.class)
@@ -123,20 +157,70 @@ class SubprocessoValidacaoServiceTest {
     }
 
     @Test
-    @DisplayName("Validar existencia atividades falha sem conhecimentos")
-    void validarExistenciaAtividadesFalhaSemConhecimentos() {
+    @DisplayName("validarAssociacoesMapa: erro atividades sem associacao")
+    void validarAssociacoesMapaErroAtividades() {
+        Competencia c = new Competencia();
+        c.setAtividades(Set.of(new Atividade()));
+        when(competenciaService.buscarPorMapa(1L)).thenReturn(List.of(c));
+
+        Atividade a = new Atividade();
+        a.setCompetencias(Collections.emptySet());
+        when(atividadeService.buscarPorMapaCodigo(1L)).thenReturn(List.of(a));
+
+        assertThatThrownBy(() -> service.validarAssociacoesMapa(1L))
+                .isInstanceOf(ErroValidacao.class)
+                .hasMessageContaining("atividades que não foram associadas");
+    }
+
+    @Test
+    @DisplayName("validarCadastro: mapa inexistente")
+    void validarCadastroMapaInexistente() {
         Subprocesso sp = new Subprocesso();
-        sp.setMapa(new Mapa());
-        sp.getMapa().setCodigo(10L);
         when(crudService.buscarSubprocesso(1L)).thenReturn(sp);
+        ValidacaoCadastroDto res = service.validarCadastro(1L);
+        assertThat(res.getValido()).isFalse();
+        assertThat(res.getErros().getFirst().getTipo()).isEqualTo("MAPA_INEXISTENTE");
+    }
 
-        Atividade a = mock(Atividade.class);
-        when(a.getConhecimentos()).thenReturn(Collections.emptyList());
+    @Test
+    @DisplayName("validarCadastro: sem atividades")
+    void validarCadastroSemAtividades() {
+        Subprocesso sp = new Subprocesso();
+        Mapa m = new Mapa(); m.setCodigo(1L); sp.setMapa(m);
+        when(crudService.buscarSubprocesso(1L)).thenReturn(sp);
+        when(atividadeService.buscarPorMapaCodigoComConhecimentos(1L)).thenReturn(List.of());
 
-        // Ensure the service returns the mocked activity
-        when(atividadeService.buscarPorMapaCodigoComConhecimentos(10L)).thenReturn(List.of(a));
+        ValidacaoCadastroDto res = service.validarCadastro(1L);
+        assertThat(res.getValido()).isFalse();
+        assertThat(res.getErros().getFirst().getTipo()).isEqualTo("SEM_ATIVIDADES");
+    }
 
-        assertThatThrownBy(() -> service.validarExistenciaAtividades(1L))
-                .isInstanceOf(ErroValidacao.class);
+    @Test
+    @DisplayName("validarCadastro: atividade sem conhecimento")
+    void validarCadastroAtividadeSemConhecimento() {
+        Subprocesso sp = new Subprocesso();
+        Mapa m = new Mapa(); m.setCodigo(1L); sp.setMapa(m);
+        Atividade a = new Atividade(); a.setCodigo(10L); a.setConhecimentos(List.of());
+
+        when(crudService.buscarSubprocesso(1L)).thenReturn(sp);
+        when(atividadeService.buscarPorMapaCodigoComConhecimentos(1L)).thenReturn(List.of(a));
+
+        ValidacaoCadastroDto res = service.validarCadastro(1L);
+        assertThat(res.getValido()).isFalse();
+        assertThat(res.getErros().getFirst().getTipo()).isEqualTo("ATIVIDADE_SEM_CONHECIMENTO");
+    }
+
+    @Test
+    @DisplayName("validarCadastro: sucesso")
+    void validarCadastroSucesso() {
+        Subprocesso sp = new Subprocesso();
+        Mapa m = new Mapa(); m.setCodigo(1L); sp.setMapa(m);
+        Atividade a = new Atividade(); a.setConhecimentos(List.of(new Conhecimento()));
+
+        when(crudService.buscarSubprocesso(1L)).thenReturn(sp);
+        when(atividadeService.buscarPorMapaCodigoComConhecimentos(1L)).thenReturn(List.of(a));
+
+        ValidacaoCadastroDto res = service.validarCadastro(1L);
+        assertThat(res.getValido()).isTrue();
     }
 }
